GNU mailutils NEWS -- history of user-visible changes. 2018-01-19
Copyright (C) 2002-2018 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.

Version 3.4.90 (Git)

* headline variable in the mail utility

The new %D specifier has been implemented, which allows the user to
supply arbitrary strftime(3) format string for outputting message
date/time. E.g.:

  set headline="%4m %20D{%Y-%m-%dT%H:%M:%S} %18f %s"

In simplified form, %D can be followed by a single time format
specifier. E.g. %DH can be used instead of %D{%H}.

* Bugfixes

** Fix alignment specifiers in the headline variable (mail utility)


Version 3.4 - 2017-11-02 

* Fix AM_MAILUTILS macro

The macro incorrectly compared three-part version number with a
two-part argument.

* Fix compilation with --disable-ipv6

* Fix SMTP EHLO command on machines with empty or undefined hostname


Version 3.3 - 2017-10-18

* TLS configuration

Note the following changes to the TLS configuration:

** global tls section

The following statements have been renamed:

  ssl-cafile   renamed to  ssl-ca-file
  ssl-cert     renamed to  ssl-certificate-file
  ssl-key      renamed to  ssl-key-file

The following statements have been removed:

  enable
  key-file-safety-checks
  cert-file-safety-checks
  ca-file-safety-checks

The functionality of the latter three is now moved to the
tls-file-checks section.

Example of a valid global tls section:

  tls {
     ssl-certificate-file /etc/ssl/cert/imap.pem;
     ssl-key-file /etc/ssl/private/imap.key;
  }

** global tls-file-checks statement

The tls-file-checks statement configures safety checks for SSL
certificate and key files.  It is a global section.  Its syntax is
as follows:

  tls-file-checks {
    key-file <arg: list>;
    cert-file <arg: list>;
    ca-file <arg: list>;
  }

The <arg> list is a list or sequence of check names optionally