@@ -1,10 +1,12 @@
-GNU mailutils NEWS -- history of user-visible changes. 2018-01-19
+GNU mailutils NEWS -- history of user-visible changes. 2018-06-02
 Copyright (C) 2002-2018 Free Software Foundation, Inc.
 See the end of file for copying conditions.
 
 Please send mailutils bug reports to <bug-mailutils@gnu.org>.
 
 Version 3.4.90 (Git)
+
+* Dropped support for Guile version prior to 2.2.0
 
 * headline variable in the mail utility
 
